Changed Prediction algorithm